--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "irc-hybrid-client-dev-tools",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Development tools to minify irc-hybrid-client files",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,13 +17,17 @@
   "homepage": "https://github.com/cotarr/irc-hybrid-client-dev-tools#readme",
   "devDependencies": {
     "del": "^6.0.0",
+    "eslint": "^7.30.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
+    "gulp-cli": "^2.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-insert": "^0.5.0",
     "gulp-minify": "^3.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3"
+  },
+  "dependencies": {
   }
 }
