--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-insert": "^0.5.0",
     "gulp-minify": "^3.1.0",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.1.3"
+    "gulp-replace": "^1.1.3",
+    "terser": "^4.8.1"
   }
 }
