--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "irc-hybrid-client-dev-tools",
-  "version": "3.0.0-dev",
+  "version": "3.0.0",
   "description": "Development tools to minify irc-hybrid-client files",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
